--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,5 +6,11 @@
  @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Dancing+Script:wght@600&family=Heebo:wght@100;200&family=Nunito:ital,wght@1,200&family=Rubik+Iso&family=Satisfy&display=swap');
 .fondo {
     width: 80%;
-    margin-left: 10%;
+    margin-left: 15%;
+}
+
+.botonInicio {
+ 
+    background: rgb(3,14,14);
+    background: linear-gradient(0deg, rgba(3,14,14,1) 0%, rgba(162,66,198,1) 100%);
 }
