Se realizo cambios a los estilos

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,11 @@ footer {
 }
 
 #imgFooter{
-    position: relative;
+    justify-content: start;
     width: 300px;
     height: 200px;
+}
+
+li a{
+    font-weight: 300;
 }
