--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,4 +30,41 @@ body {
     width: 80%;
   }
 
+  .selecion-artista:hover {
+    opacity: 0.5;
+  }
+  
+  .selecion-album:hover {
+    opacity: 0.5;
+  }
+  
+  .selecion-album:hover {
+    opacity: 0.5;
+  }
+  .icono-superpuesto {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .icono-superpuesto a {
+    color: white;
+    font-size: 3em;
+  }
+  
+  .selecion-album:hover .icono-superpuesto {
+    opacity: 1; 
+  }
+  
+  .icono-favoritos {
+    color: rgb(0, 0, 0);
+  }
   
