--- a/CSS/style.css
+++ b/CSS/style.css
@@ -89,3 +89,31 @@ body {
       url("https://img.freepik.com/vector-gratis/onda-sonido-audio-3d-oscilacion-pulso-musica-colorida-patron-impulso-brillante_1217-3981.jpg?w=360");
     background-position-y: 25%;
   }
+
+  .custom-card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .card-body {
+    flex: 1;
+  }
+  
+  .card {
+    box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
+  }
+  
+  .seccion-artistas {
+    box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
+  }
+  
+  .btn-selecion i:hover {
+    color: #00c0ff;
+  }
+  
+  .btn-play i:hover {
+    color: #00c0ff;
+  }
+  
+  
