--- a/CSS/style.css
+++ b/CSS/style.css
@@ -115,5 +115,58 @@ body {
   .btn-play i:hover {
     color: #00c0ff;
   }
+
+  @media all and (max-width: 767px) {
+    .btn-selecion i {
+      font-size: 20px;
+      margin-right: 10px;
+    }
+    p {
+      font-size: 12px;
+    }
+    .nombreAlbum {
+      display: none;
+    }
+    .card-body {
+      padding: 0;
+    }
+    .d-block {
+      height: 95px;
+      width: 95px;
+      margin: 10px;
+      border-radius: 50%;
+    }
+    .album {
+      width: 80%;
+      height: auto;
+      padding: 0;
+      border-radius: 20px;
+    }
+    .seccion-carousel {
+      height: 150px;
+    }
+    .carousel-control-next,
+    .carousel-control-prev {
+      width: 20px;
+    }
+  }
+  
+  @media all and (min-width: 768px) and (max-width: 991px) {
+    .d-block {
+      height: 130px;
+      width: 130px;
+      margin: 10px;
+      border-radius: 50%;
+    }
+    .seccion-carousel {
+      height: 200px;
+    }
+  }
+  @media all and (min-width: 992px) {
+    .d-block {
+      height: 180px;
+      width: 180px;
+    }
+  }
   
   
