--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,14 @@
 body{
-    background-color: #411945;
+    background-color: #312c32;
 }
 
 html{
     font-family: 'Roboto', sans-serif;
+}
+
+.container img{
+    width: 5rem;
+    height: 5rem;
 }
 
 #listaNavbar a{
@@ -15,7 +20,6 @@ html{
 #elementosNavbar a:hover{
     color: #bf56ca;
 }
-
 
 #imgLogo{
     max-height: 2rem;
@@ -49,13 +53,33 @@ html{
         padding: 0;
         font-size: 1.1rem;
     }
+
+    .container img{
+        width: 6.5rem;
+        height: 6.2rem;
+    }
+
+    #inputBuscar {
+        width: 12rem;
+        height: 2.2rem;
+    }
+
+    .botonesUsuario {
+        width: 10rem;
+        height: 2.8rem;
+    }
 }
 
 @media (min-width: 992px) and (max-width: 1199px){
 
+    /* #elementosNavbar{
+        display: flex;
+        flex-direction: column;
+    } */
+
     #elementosNavbar a {
         padding: 0;
-        font-size: 0.9rem;
+        font-size: 1rem;
     }
 
     #navbarSupportedContent{
@@ -66,6 +90,27 @@ html{
         width: 12rem;
         height: 2.5rem;
     }
+
+    .container img{
+        width: 6.5rem;
+        height: 6.5rem;
+    }
+
+    nav li{
+       height: 2rem;
+    }
+
+    #listaNavbar {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /* #elementosNav {
+        height: 2rem;
+    } */
 }
 
 @media (min-width: 768px) and (max-width: 991px){
