--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,12 @@
   box-shadow: 0 0 2px 0 rgb(49, 49, 49);
   border-radius: 20px;
 }
+
+
+p {
+    font-family: "Roboto", sans-serif;
+}
+
+a{
+    font-family: "Roboto", sans-serif;
+}
