se agrego fondo al carousel

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,6 +120,17 @@ body {
   font-size: 25px;
 }
 
+.seccion-carousel{
+  
+    background: rgb(0, 192, 255);
+    background: linear-gradient(
+      90deg,
+      rgba(0, 192, 255, 1) 0%,
+      rgba(180, 22, 200, 1) 100%
+    );
+  
+}
+
 @media all and (max-width: 767px) {
   .btn-selecion i {
     font-size: 20px;
