--- a/CSS/administrarCanciones.css
+++ b/CSS/administrarCanciones.css
@@ -11,6 +11,18 @@ main{
 h1{
     margin-top: 20px;
 }
+.banner{
+    background: rgb(0, 192, 255);
+    background: linear-gradient(
+      90deg,
+      rgba(0, 192, 255, 1) 0%,
+      rgba(180, 22, 200, 1) 100%
+    );
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 @media all and (max-width: 767px) {
     .titulo{
