Corregi conflictos del merge anterior

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,332 +1,1 @@
-
-body{
-    background-color: #312c32;
-}
-
-html{
-    font-family: 'Roboto', sans-serif;
-}
-
-.container img{
-    width: 5rem;
-    height: 5rem;
-}
-
-#listaNavbar a{
-    padding: 0;
-    font-size: 1.5rem;
-    color: rgb(255, 255, 255);
-}
-
-#elementosNavbar a:hover{
-    color: #bf56ca;
-}
-
-#imgLogo{
-    max-height: 2rem;
-    width: 2rem;
-}
-
-#elementosNavbar {
-    display: flex; 
-}
-
-#inputBuscar {
-    width: 13rem;
-    height: 2.5rem;
-}
-
-#buscarNavbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    text-decoration: none;
-}
-
-.efectoBlur{
-    background: #fafafa10 !important;
-    backdrop-filter: blur(0.4rem) ; 
-}
-
-@media (min-width: 1200px) and (max-width: 1400px){
-    #listaNavbar a {
-        padding: 0;
-        font-size: 1.1rem;
-    }
-
-    .container img{
-        width: 6.5rem;
-        height: 6.2rem;
-    }
-
-    #inputBuscar {
-        width: 12rem;
-        height: 2.2rem;
-    }
-
-    .botonesUsuario {
-        width: 10rem;
-        height: 2.8rem;
-    }
-}
-
-body {
-  background: #312c32;
-}
-
-.d-block {
-  height: 200px;
-  width: 200px;
-  border-radius: 50%;
-  margin: 20px;
-  box-shadow: 0px 5px 20px rgba(170, 240, 91, 0.1);
-}
-
-.seccion-carousel {
-  height: 300px;
-}
-
-.carousel-control-next,
-.carousel-control-prev {
-  width: 40px;
-}
-
-.selecion-artista {
-  cursor: pointer;
-}
-
-.album {
-  border-radius: 40px;
-  padding: 20px;
-  cursor: pointer;
-  width: 80%;
-}
-
-.selecion-artista:hover {
-  opacity: 0.5;
-}
-
-.selecion-album:hover {
-  opacity: 0.5;
-}
-
-.selecion-album:hover {
-  opacity: 0.5;
-}
-.icono-superpuesto {
-  position: absolute;
-  bottom: 20px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  cursor: pointer;
-}
-
-.icono-superpuesto a {
-  color: white;
-  font-size: 3em;
-}
-
-.selecion-album:hover .icono-superpuesto {
-  opacity: 1;
-}
-
-.icono-favoritos {
-  color: rgb(0, 0, 0);
-}
-
-.bi {
-  width: 100px;
-  height: 100px;
-}
-
-.btn-play i {
-  font-size: 40px;
-  cursor: pointer;
-}
-
-.btn-selecion i {
-  font-size: 20px;
-  margin-right: 20px;
-  cursor: pointer;
-}
-.pistaMusica {
-  padding: 5px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("https://img.freepik.com/vector-gratis/onda-sonido-audio-3d-oscilacion-pulso-musica-colorida-patron-impulso-brillante_1217-3981.jpg?w=360");
-  background-position-y: 25%;
-}
-
-.custom-card {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.card-body {
-  flex: 1;
-}
-
-.card {
-  box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
-}
-
-.seccion-artistas {
-  box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
-}
-
-.btn-selecion i:hover {
-  color: #00c0ff;
-}
-
-.btn-play i:hover {
-  color: #00c0ff;
-}
-
-.row p{
-  font-size: 25px;
-}
-
-@media (min-width: 992px) and (max-width: 1199px){
-
-    /* #elementosNavbar{
-        display: flex;
-        flex-direction: column;
-    } */
-
-    #elementosNavbar a {
-        padding: 0;
-        font-size: 1rem;
-    }
-
-    #navbarSupportedContent{
-        justify-content: center;
-    }
-
-    #inputBuscar {
-        width: 12rem;
-        height: 2.5rem;
-    }
-
-    .container img{
-        width: 6.5rem;
-        height: 6.5rem;
-    }
-
-    nav li{
-       height: 2rem;
-    }
-
-    #listaNavbar {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    /* #elementosNav {
-        height: 2rem;
-    } */
-}
-
-@media (min-width: 768px) and (max-width: 991px){
-    #elementosNavbar{
-        display: flex;
-        flex-direction: column;
-    }
-
-    #listaNavbar {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #listaNavbar a {
-        padding: 0;
-        font-size: 1rem;
-    }
-
-    #navbarSupportedContent{
-        justify-content: space-between;
-    }
-}
-
-@media (min-width: 0px) and (max-width: 767px){
-
-    li, form {
-        margin: 0.5rem;
-    }
-
-    #elementosNav{
-        flex-direction: column;
-    }
-}
-
-@media all and (max-width: 767px) {
-  .btn-selecion i {
-    font-size: 20px;
-    margin-right: 10px;
-  }
-  p {
-    font-size: 12px;
-  }
-  .nombreAlbum {
-    display: none;
-  }
-  .card-body {
-    padding: 0;
-  }
-  .d-block {
-    height: 95px;
-    width: 95px;
-    margin: 10px;
-    border-radius: 50%;
-  }
-  .album {
-    width: 80%;
-    height: auto;
-    padding: 0;
-    border-radius: 20px;
-  }
-  .seccion-carousel {
-    height: 150px;
-  }
-  .carousel-control-next,
-  .carousel-control-prev {
-    width: 20px;
-  }
-  .row p{
-    font-size: 16px;
-  }
-}
-
-@media all and (min-width: 768px) and (max-width: 991px) {
-  .d-block {
-    height: 130px;
-    width: 130px;
-    margin: 10px;
-    border-radius: 50%;
-  }
-  .seccion-carousel {
-    height: 200px;
-  }
-  .row p{
-    font-size: 20px;
-  }
-}
-@media all and (min-width: 992px) {
-  .d-block {
-    height: 180px;
-    width: 180px;
-  }
-}
-
+/* codigo css */
