--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,16 @@
 body {
   background: #312c32;
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main{
+  position: relative;
+  top: 155px;
+
+  flex-grow: 1;
 }
 
 .d-block {
@@ -11,7 +22,9 @@ body {
 }
 
 .seccion-carousel {
-  height: 300px;
+  height: auto;
+  padding: 20px 0;
+  
 }
 
 .carousel-control-next,
@@ -157,15 +170,15 @@ body {
     padding: 0;
     border-radius: 20px;
   }
-  .seccion-carousel {
-    height: 150px;
-  }
   .carousel-control-next,
   .carousel-control-prev {
     width: 20px;
   }
   .row p{
     font-size: 16px;
+  }
+  main{
+    top: 123px;
   }
 }
 
@@ -176,11 +189,11 @@ body {
     margin: 10px;
     border-radius: 50%;
   }
-  .seccion-carousel {
-    height: 200px;
-  }
   .row p{
     font-size: 20px;
+  }
+  main{
+    top: 153px;
   }
 }
 @media all and (min-width: 992px) {
@@ -188,4 +201,216 @@ body {
     height: 180px;
     width: 180px;
   }
+  main{
+    top: 153px;
+  }
+}
+
+
+html{
+  font-family: 'Roboto', sans-serif;
+}
+
+.container img{
+  width: 5rem;
+  height: 5rem;
+}
+
+#listaNavbar a{
+  padding: 0;
+  font-size: 1.5rem;
+  color: rgb(255, 255, 255);
+}
+
+#elementosNavbar a:hover{
+  color: #bf56ca;
+}
+
+#imgLogo{
+  max-height: 2rem;
+  width: 2rem;
+}
+
+#elementosNavbar {
+  display: flex; 
+}
+
+#inputBuscar {
+  width: 13rem;
+  height: 2.5rem;
+}
+
+#buscarNavbar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  text-decoration: none;
+}
+
+.efectoBlur{
+  background: #fafafa10 !important;
+  backdrop-filter: blur(0.4rem) ; 
+}
+
+@media (min-width: 1200px) and (max-width: 1400px){
+  #listaNavbar a {
+      padding: 0;
+      font-size: 1.1rem;
+  }
+
+  .container img{
+      width: 6.5rem;
+      height: 6.2rem;
+  }
+
+  #inputBuscar {
+      width: 12rem;
+      height: 2.2rem;
+  }
+
+  .botonesUsuario {
+      width: 10rem;
+      height: 2.8rem;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px){
+
+
+  #elementosNavbar a {
+      padding: 0;
+      font-size: 1rem;
+  }
+
+  #navbarSupportedContent{
+      justify-content: center;
+  }
+
+  #inputBuscar {
+      width: 12rem;
+      height: 2.5rem;
+  }
+
+  .container img{
+      width: 6.5rem;
+      height: 6.5rem;
+  }
+
+  nav li{
+     height: 2rem;
+  }
+
+  #listaNavbar {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+  #elementosNavbar{
+      display: flex;
+      flex-direction: column;
+  }
+
+  #listaNavbar {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+
+  #listaNavbar a {
+      padding: 0;
+      font-size: 1rem;
+  }
+
+  #navbarSupportedContent{
+      justify-content: space-between;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px){
+
+  li, form {
+      margin: 0.5rem;
+  }
+
+  #elementosNav{
+      flex-direction: column;
+  }
+}
+
+
+
+footer {
+  width: 100%;
+  background: #312c32;
+  position: relative;
+  top: 200px;
+}
+
+#imgFooter {
+  display: flex;
+  justify-content: start;
+  width: 300px;
+  height: 200px;
+}
+
+li a {
+  font-weight: 300;
+}
+
+
+@media (min-width:577px) and (max-width: 768px) {
+  .contenedorLogo {
+    display: flex;  
+    justify-content: center
+  }
+
+  .listaFooter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+
+  #imgFooter {
+    width: 100;
+    height: 100;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  .contenedorLogo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .listaFooter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+
+  #imgFooter {
+    width: 300px;
+    height: 220px;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+    ul,ol{
+        padding-left: 0rem;
+    }
 }
