--- a/CSS/administrarCanciones.css
+++ b/CSS/administrarCanciones.css
@@ -1,33 +1,42 @@
-body{
-    background: #312c32;
+body {
+  background: #312c32;
 }
 
-th, td{
-    text-align: center;
+main {
+  position: relative;
+  top: 140px;
+  flex-grow: 1;
 }
-main{
-    box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
+
+th,
+td {
+  text-align: center;
 }
-h1{
-    margin-top: 20px;
+.seccion-tabla {
+  box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
 }
-.banner{
-    background: rgb(0, 192, 255);
-    background: linear-gradient(
-      90deg,
-      rgba(0, 192, 255, 1) 0%,
-      rgba(180, 22, 200, 1) 100%
-    );
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+h1 {
+  margin-top: 20px;
+}
+.banner {
+  background: rgb(0, 192, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 192, 255, 1) 0%,
+    rgba(180, 22, 200, 1) 100%
+  );
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media all and (max-width: 767px) {
-    .titulo{
-        flex-direction: column;
-    } 
+    main {
+        position: relative;
+        top: 90px;
+        flex-grow: 1;
+      }
   }
   
   @media all and (min-width: 768px) and (max-width: 991px) {
@@ -37,148 +46,220 @@ h1{
     
   }
 
-  html{
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  .container img{
-    width: 5rem;
-    height: 5rem;
-  }
-  
-  #listaNavbar a{
+html {
+  font-family: "Roboto", sans-serif;
+}
+
+.container img {
+  width: 5rem;
+  height: 5rem;
+}
+
+#listaNavbar a {
+  padding: 0;
+  font-size: 1.5rem;
+  color: rgb(255, 255, 255);
+}
+
+#elementosNavbar a:hover {
+  color: #bf56ca;
+}
+
+#imgLogo {
+  max-height: 2rem;
+  width: 2rem;
+}
+
+#elementosNavbar {
+  display: flex;
+}
+
+#inputBuscar {
+  width: 13rem;
+  height: 2.5rem;
+}
+
+#buscarNavbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  text-decoration: none;
+}
+
+.efectoBlur {
+  background: #fafafa10 !important;
+  backdrop-filter: blur(0.4rem);
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+  #listaNavbar a {
     padding: 0;
-    font-size: 1.5rem;
-    color: rgb(255, 255, 255);
+    font-size: 1.1rem;
   }
-  
-  #elementosNavbar a:hover{
-    color: #bf56ca;
+
+  .container img {
+    width: 6.5rem;
+    height: 6.2rem;
   }
-  
-  #imgLogo{
-    max-height: 2rem;
-    width: 2rem;
-  }
-  
-  #elementosNavbar {
-    display: flex; 
-  }
-  
+
   #inputBuscar {
-    width: 13rem;
+    width: 12rem;
+    height: 2.2rem;
+  }
+
+  .botonesUsuario {
+    width: 10rem;
+    height: 2.8rem;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  /* #elementosNavbar{
+        display: flex;
+        flex-direction: column;
+    } */
+
+  #elementosNavbar a {
+    padding: 0;
+    font-size: 1rem;
+  }
+
+  #navbarSupportedContent {
+    justify-content: center;
+  }
+
+  #inputBuscar {
+    width: 12rem;
     height: 2.5rem;
   }
-  
-  #buscarNavbar{
+
+  .container img {
+    width: 6.5rem;
+    height: 6.5rem;
+  }
+
+  nav li {
+    height: 2rem;
+  }
+
+  #listaNavbar {
+    text-align: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
-    text-decoration: none;
   }
-  
-  .efectoBlur{
-    background: #fafafa10 !important;
-    backdrop-filter: blur(0.4rem) ; 
-  }
-  
-  @media (min-width: 1200px) and (max-width: 1400px){
-    #listaNavbar a {
-        padding: 0;
-        font-size: 1.1rem;
-    }
-  
-    .container img{
-        width: 6.5rem;
-        height: 6.2rem;
-    }
-  
-    #inputBuscar {
-        width: 12rem;
-        height: 2.2rem;
-    }
-  
-    .botonesUsuario {
-        width: 10rem;
-        height: 2.8rem;
-    }
-  }
-  
-  @media (min-width: 992px) and (max-width: 1199px){
-  
-    /* #elementosNavbar{
-        display: flex;
-        flex-direction: column;
-    } */
-  
-    #elementosNavbar a {
-        padding: 0;
-        font-size: 1rem;
-    }
-  
-    #navbarSupportedContent{
-        justify-content: center;
-    }
-  
-    #inputBuscar {
-        width: 12rem;
-        height: 2.5rem;
-    }
-  
-    .container img{
-        width: 6.5rem;
-        height: 6.5rem;
-    }
-  
-    nav li{
-       height: 2rem;
-    }
-  
-    #listaNavbar {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-  
-    /* #elementosNav {
+
+  /* #elementosNav {
         height: 2rem;
     } */
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  #elementosNavbar {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #listaNavbar {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #listaNavbar a {
+    padding: 0;
+    font-size: 1rem;
+  }
+
+  #navbarSupportedContent {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  li,
+  form {
+    margin: 0.5rem;
+  }
+
+  #elementosNav {
+    flex-direction: column;
+  }
+}
+
+
+
+
+footer {
+    width: 100%;
+    background: #312c32;
+    position: relative;
+    top: 200px;
   }
   
-  @media (min-width: 768px) and (max-width: 991px){
-    #elementosNavbar{
-        display: flex;
-        flex-direction: column;
+  #imgFooter {
+    display: flex;
+    justify-content: start;
+    width: 300px;
+    height: 200px;
+  }
+  
+  li a {
+    font-weight: 300;
+  }
+  .listaFooter{
+    padding: 0;
+  }
+  
+  
+  @media (min-width:577px) and (max-width: 768px) {
+    .contenedorLogo {
+      display: flex;  
+      justify-content: center
     }
   
-    #listaNavbar {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    .listaFooter{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0px;
     }
   
-    #listaNavbar a {
-        padding: 0;
-        font-size: 1rem;
-    }
-  
-    #navbarSupportedContent{
-        justify-content: space-between;
+    #imgFooter {
+      width: 100;
+      height: 100;
     }
   }
   
-  @media (min-width: 0px) and (max-width: 767px){
-  
-    li, form {
-        margin: 0.5rem;
+  @media (min-width: 769px) and (max-width: 992px) {
+    .contenedorLogo {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
     }
   
-    #elementosNav{
-        flex-direction: column;
+    .listaFooter{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0px;
     }
+  
+    #imgFooter {
+      width: 300px;
+      height: 220px;
+    }
+  }
+  
+  @media (min-width: 993px) and (max-width: 1200px) {
+      ul,ol{
+          padding-left: 0rem;
+      }
   }
