--- a/css/iniciarSesion-Estilos.css
+++ b/css/iniciarSesion-Estilos.css
@@ -15,3 +15,13 @@
 #contenedorPrincipal {
     margin-top: 100px;
 }
+
+@media (min-width: 0px) and (max-width: 767px){
+    #imgIniciarSesion{
+        display: none;
+    }
+
+    .contenedorIniciarSesion {
+        border-radius: 17px;
+    }
+}
