Realice la inyeccion de las canciones en la pagina principal

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,12 @@ a{
     font-family: "Roboto", sans-serif;
 }
 
+.reproducir {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .container img {
   width: 5rem;
   height: 5rem;
