--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,6 @@
+* {
+  transition: 0.7s all ease-in-out;
+}
 
 body {
   background-color: #312c32;
@@ -9,6 +12,26 @@ html {
 
 a{
     font-family: "Roboto", sans-serif;
+}
+
+.colCaratulaCancion > a {
+  width: 100%;
+  border-radius: 10px;
+  background-color: transparent;
+  border: 0;
+}
+
+.colCaratulaCancion > a > img {
+  filter: opacity(0.6);
+  width: 100% ; 
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.colCaratulaCancion > a > img:hover {
+  filter: opacity(1);
 }
 
 .reproducir {
