--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,8 +10,8 @@ html {
   font-family: "Roboto", sans-serif;
 }
 
-a{
-    font-family: "Roboto", sans-serif;
+a {
+  font-family: "Roboto", sans-serif;
 }
 
 .colCaratulaCancion > a {
@@ -23,7 +23,7 @@ a{
 
 .colCaratulaCancion > a > img {
   filter: opacity(0.6);
-  width: 100% ; 
+  width: 100%;
   height: 100%;
   border-radius: 10px;
   object-fit: cover;
@@ -46,16 +46,15 @@ a{
 }
 
 #textoRegistro {
-    font-family: "Roboto", sans-serif;
-    font-size: 17px;
+  font-family: "Roboto", sans-serif;
+  font-size: 17px;
 }
 
-
-.contenedorForm{
+.contenedorForm {
   background: #ffffff;
   box-shadow: 0 0 2px 0 rgb(189, 127, 143);
   border-radius: 20px;
-  box-sizing:content-box;
+  box-sizing: content-box;
   width: 40%;
 }
 
@@ -104,10 +103,26 @@ a{
   );
 } */
 
-#mainRegistro{
+#mainRegistro {
   position: static;
   height: fit-content;
   margin-top: 25px;
+}
+
+.colDetalleCancion h1,
+.colDetalleCancion h2,
+.colDetalleCancion h3,
+.colDetalleCancion h4,
+.colDetalleCancion h5 {
+  color: white;
+  text-decoration: underline;
+}
+
+.colDetalleCancion p {
+  font-size: 0.6rem;
+  color: rgb(192, 192, 192);
+  line-height: 0.4;
+  /* font-weight: 500; */
 }
 
 @media (min-width: 1200px) and (max-width: 1400px) {
@@ -233,6 +248,20 @@ main {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("https://img.freepik.com/vector-gratis/onda-sonido-audio-3d-oscilacion-pulso-musica-colorida-patron-impulso-brillante_1217-3981.jpg?w=360");
   background-position-y: 25%;
+}
+
+.pistaMusica a {
+  color: white;
+  text-decoration: none;
+}
+
+.modal-body p,
+.modal h1,
+.modal h2,
+.modal h3,
+.modal h4,
+.modal h5 {
+  color: black !important;
 }
 
 .custom-card {
@@ -370,11 +399,11 @@ main {
   .carousel-control-prev {
     width: 20px;
   }
-  .row p{
+  .row p {
     font-size: 16px;
   }
 
-  .contenedorForm{
+  .contenedorForm {
     width: 80%;
     margin-top: 2rem;
   }
@@ -391,22 +420,22 @@ main {
     border-radius: 50%;
   }
 
-  .contenedorForm{
+  .contenedorForm {
     width: 65%;
     margin-top: 2rem;
-  .row p {
-    font-size: 20px;
+    .row p {
+      font-size: 20px;
+    }
+    main {
+      top: 153px;
+    }
   }
-  main {
-    top: 153px;
+  @media all and (min-width: 992px) {
+    .d-block {
+      height: 180px;
+      width: 180px;
+    }
   }
-}
-@media all and (min-width: 992px) {
-  .d-block {
-    height: 180px;
-    width: 180px;
-  }
-}
   main {
     top: 153px;
   }
