--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,6 @@
+* {
+  transition: 0.7s all ease-in-out;
+}
 
 body {
   background-color: #312c32;
@@ -7,8 +10,34 @@ html {
   font-family: "Roboto", sans-serif;
 }
 
-a{
-    font-family: "Roboto", sans-serif;
+a {
+  font-family: "Roboto", sans-serif;
+}
+
+.colCaratulaCancion > a {
+  width: 100%;
+  border-radius: 10px;
+  background-color: transparent;
+  border: 0;
+}
+
+.colCaratulaCancion > a > img {
+  filter: opacity(0.6);
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.colCaratulaCancion > a > img:hover {
+  filter: opacity(1);
+}
+
+.reproducir {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container img {
@@ -16,17 +45,29 @@ a{
   height: 5rem;
 }
 
-#textoRegistro {
-    font-family: "Roboto", sans-serif;
-    font-size: 17px;
+.visualizarImagen {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0;
 }
 
+.visualizarImagen img {
+  width: 10rem;
+  height: 10rem;
+  object-fit: cover;
+}
 
-.contenedorForm{
+#textoRegistro {
+  font-family: "Roboto", sans-serif;
+  font-size: 17px;
+}
+
+.contenedorForm {
   background: #ffffff;
   box-shadow: 0 0 2px 0 rgb(189, 127, 143);
   border-radius: 20px;
-  box-sizing:content-box;
+  box-sizing: content-box;
   width: 40%;
 }
 
@@ -75,10 +116,26 @@ a{
   );
 } */
 
-#mainRegistro{
+#mainRegistro {
   position: static;
   height: fit-content;
   margin-top: 25px;
+}
+
+.colDetalleCancion h1,
+.colDetalleCancion h2,
+.colDetalleCancion h3,
+.colDetalleCancion h4,
+.colDetalleCancion h5 {
+  color: white;
+  text-decoration: underline;
+}
+
+.colDetalleCancion p {
+  font-size: 0.6rem;
+  color: rgb(192, 192, 192);
+  line-height: 0.4;
+  /* font-weight: 500; */
 }
 
 @media (min-width: 1200px) and (max-width: 1400px) {
@@ -206,6 +263,20 @@ main {
   background-position-y: 25%;
 }
 
+.pistaMusica a {
+  color: white;
+  text-decoration: none;
+}
+
+.modal-body p,
+.modal h1,
+.modal h2,
+.modal h3,
+.modal h4,
+.modal h5 {
+  color: black !important;
+}
+
 .custom-card {
   height: 100%;
   display: flex;
@@ -294,6 +365,11 @@ main {
 }
 
 @media (min-width: 0px) and (max-width: 767px) {
+  #elementosNavbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   li,
   form {
@@ -336,11 +412,11 @@ main {
   .carousel-control-prev {
     width: 20px;
   }
-  .row p{
+  .row p {
     font-size: 16px;
   }
 
-  .contenedorForm{
+  .contenedorForm {
     width: 80%;
     margin-top: 2rem;
   }
@@ -357,22 +433,22 @@ main {
     border-radius: 50%;
   }
 
-  .contenedorForm{
+  .contenedorForm {
     width: 65%;
     margin-top: 2rem;
-  .row p {
-    font-size: 20px;
+    .row p {
+      font-size: 20px;
+    }
+    main {
+      top: 153px;
+    }
   }
-  main {
-    top: 153px;
+  @media all and (min-width: 992px) {
+    .d-block {
+      height: 180px;
+      width: 180px;
+    }
   }
-}
-@media all and (min-width: 992px) {
-  .d-block {
-    height: 180px;
-    width: 180px;
-  }
-}
   main {
     top: 153px;
   }
