--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,665 @@
-body{
-    background-color: #312c32;
-  }
-  
-  html{
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  .container img{
-    width: 5rem;
-    height: 5rem;
-  }
-  
-  #listaNavbar a{
+* {
+  transition: 0.7s all ease-in-out;
+}
+
+body {
+  background-color: #312c32;
+}
+
+html {
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  font-family: "Roboto", sans-serif;
+}
+
+.colCaratulaCancion > a {
+  width: 100%;
+  border-radius: 10px;
+  background-color: transparent;
+  border: 0;
+}
+
+.colCaratulaCancion > a > img {
+  filter: opacity(0.6);
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.colCaratulaCancion > a > img:hover {
+  filter: opacity(1);
+}
+
+.reproducir {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container img {
+  width: 5rem;
+  height: 5rem;
+}
+
+.visualizarImagen {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0;
+}
+
+.visualizarImagen img {
+  width: 10rem;
+  height: 10rem;
+  object-fit: cover;
+}
+
+#textoRegistro {
+  font-family: "Roboto", sans-serif;
+  font-size: 17px;
+}
+
+.contenedorForm {
+  background: #ffffff;
+  box-shadow: 0 0 2px 0 rgb(189, 127, 143);
+  border-radius: 20px;
+  box-sizing: content-box;
+  width: 40%;
+}
+
+#listaNavbar a {
+  padding: 0;
+  font-size: 1.5rem;
+  color: rgb(255, 255, 255);
+}
+
+#elementosNavbar a:hover {
+  color: #bf56ca;
+}
+
+#imgLogo {
+  max-height: 2rem;
+  width: 2rem;
+}
+
+#elementosNavbar {
+  display: flex;
+}
+
+#inputBuscar {
+  width: 13rem;
+  height: 2.5rem;
+}
+
+#buscarNavbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  text-decoration: none;
+}
+
+.efectoBlur {
+  background: #fafafa10 !important;
+  backdrop-filter: blur(0.4rem);
+}
+
+/* .seccion-carousel {
+  background: rgb(0, 192, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 192, 255, 1) 0%,
+    rgba(180, 22, 200, 1) 100%
+  );
+} */
+
+#mainRegistro {
+  position: static;
+  height: fit-content;
+  margin-top: 25px;
+}
+
+.colDetalleCancion h1,
+.colDetalleCancion h2,
+.colDetalleCancion h3,
+.colDetalleCancion h4,
+.colDetalleCancion h5 {
+  color: white;
+  text-decoration: underline;
+}
+
+.colDetalleCancion p {
+  font-size: 0.6rem;
+  color: rgb(192, 192, 192);
+  line-height: 0.4;
+  /* font-weight: 500; */
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+  #listaNavbar a {
     padding: 0;
-    font-size: 1.5rem;
-    color: rgb(255, 255, 255);
+    font-size: 1.1rem;
   }
-  
-  #elementosNavbar a:hover{
-    color: #bf56ca;
+
+  .container img {
+    width: 6.5rem;
+    height: 6.2rem;
   }
-  
-  #imgLogo{
-    max-height: 2rem;
-    width: 2rem;
-  }
-  
-  #elementosNavbar {
-    display: flex; 
-  }
-  
+
   #inputBuscar {
-    width: 13rem;
+    width: 12rem;
+    height: 2.2rem;
+  }
+
+  .botonesUsuario {
+    width: 10rem;
+    height: 2.8rem;
+  }
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 1px;
+}
+
+main {
+  position: relative;
+  top: 155px;
+  flex-grow: 1;
+}
+
+.d-block {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  margin: 20px;
+  box-shadow: 0px 5px 20px rgba(170, 240, 91, 0.1);
+}
+
+.seccion-carousel {
+  height: 30vw;
+  padding: 0;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+  width: 40px;
+}
+
+.selecion-artista {
+  background-color: rgba(0, 0, 0, 0.386);
+  cursor: pointer;
+}
+
+.album {
+  border-radius: 40px;
+  padding: 20px;
+  cursor: pointer;
+  width: 80%;
+}
+
+.selecion-artista:hover {
+  opacity: 0.5;
+}
+
+.selecion-album:hover {
+  opacity: 0.5;
+}
+
+.selecion-album:hover {
+  opacity: 0.5;
+}
+.icono-superpuesto {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.icono-superpuesto a {
+  color: white;
+  font-size: 3em;
+}
+
+.selecion-album:hover .icono-superpuesto {
+  opacity: 1;
+}
+
+.icono-favoritos {
+  color: rgb(0, 0, 0);
+}
+
+.bi {
+  width: 100px;
+  height: 100px;
+}
+
+.btn-play i {
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.btn-selecion i {
+  font-size: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+.pistaMusica {
+  padding: 5px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("https://img.freepik.com/vector-gratis/onda-sonido-audio-3d-oscilacion-pulso-musica-colorida-patron-impulso-brillante_1217-3981.jpg?w=360");
+  background-position-y: 25%;
+}
+
+.pistaMusica a {
+  color: white;
+  text-decoration: none;
+}
+
+.modal-body p,
+.modal h1,
+.modal h2,
+.modal h3,
+.modal h4,
+.modal h5 {
+  color: black !important;
+}
+
+.custom-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-body {
+  flex: 1;
+}
+
+.card {
+  box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
+}
+
+.seccion-artistas {
+  box-shadow: 0px 5px 20px rgba(128, 128, 128, 0.5);
+}
+
+.btn-selecion i:hover {
+  color: #00c0ff;
+}
+
+.btn-play i:hover {
+  color: #00c0ff;
+}
+
+.row p {
+  font-size: 25px;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  #elementosNavbar a {
+    padding: 0;
+    font-size: 1rem;
+  }
+
+  #navbarSupportedContent {
+    justify-content: center;
+  }
+
+  #inputBuscar {
+    width: 12rem;
     height: 2.5rem;
   }
-  
-  #buscarNavbar{
+
+  .container img {
+    width: 6.5rem;
+    height: 6.5rem;
+  }
+
+  nav li {
+    height: 2rem;
+  }
+
+  #listaNavbar {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  #elementosNavbar {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #listaNavbar {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #listaNavbar a {
+    padding: 0;
+    font-size: 1rem;
+  }
+
+  #navbarSupportedContent {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  #elementosNavbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
-    text-decoration: none;
   }
-  
-  .efectoBlur{
-    background: #fafafa10 !important;
-    backdrop-filter: blur(0.4rem) ; 
+
+  li,
+  form {
+    margin: 0.5rem;
   }
-  
-  @media (min-width: 1200px) and (max-width: 1400px){
-    #listaNavbar a {
-        padding: 0;
-        font-size: 1.1rem;
-    }
-  
-    .container img{
-        width: 6.5rem;
-        height: 6.2rem;
-    }
-  
-    #inputBuscar {
-        width: 12rem;
-        height: 2.2rem;
-    }
-  
-    .botonesUsuario {
-        width: 10rem;
-        height: 2.8rem;
-    }
+
+  #elementosNav {
+    flex-direction: column;
   }
-  
-  @media (min-width: 992px) and (max-width: 1199px){
-  
-    /* #elementosNavbar{
-        display: flex;
-        flex-direction: column;
-    } */
-  
-    #elementosNavbar a {
-        padding: 0;
-        font-size: 1rem;
-    }
-  
-    #navbarSupportedContent{
-        justify-content: center;
-    }
-  
-    #inputBuscar {
-        width: 12rem;
-        height: 2.5rem;
-    }
-  
-    .container img{
-        width: 6.5rem;
-        height: 6.5rem;
-    }
-  
-    nav li{
-       height: 2rem;
-    }
-  
-    #listaNavbar {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-  
-    /* #elementosNav {
-        height: 2rem;
-    } */
+}
+
+@media all and (max-width: 767px) {
+  .btn-selecion i {
+    font-size: 20px;
+    margin-right: 10px;
   }
-  
-  @media (min-width: 768px) and (max-width: 991px){
-    #elementosNavbar{
-        display: flex;
-        flex-direction: column;
+  p {
+    font-size: 12px;
+  }
+  .nombreAlbum {
+    display: none;
+  }
+  .card-body {
+    padding: 0;
+  }
+  .d-block {
+    height: 95px;
+    width: 95px;
+    margin: 10px;
+    border-radius: 50%;
+  }
+  .album {
+    width: 80%;
+    height: auto;
+    padding: 0;
+    border-radius: 20px;
+  }
+
+  .carousel-control-next,
+  .carousel-control-prev {
+    width: 20px;
+  }
+  .row p {
+    font-size: 16px;
+  }
+
+  .contenedorForm {
+    width: 80%;
+    margin-top: 2rem;
+  }
+  main {
+    top: 123px;
+  }
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .d-block {
+    height: 130px;
+    width: 130px;
+    margin: 10px;
+    border-radius: 50%;
+  }
+
+  .contenedorForm {
+    width: 65%;
+    margin-top: 2rem;
+    .row p {
+      font-size: 20px;
     }
-  
-    #listaNavbar {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-  
-    #listaNavbar a {
-        padding: 0;
-        font-size: 1rem;
-    }
-  
-    #navbarSupportedContent{
-        justify-content: space-between;
+    main {
+      top: 153px;
     }
   }
-  
-  @media (min-width: 0px) and (max-width: 767px){
-  
-    li, form {
-        margin: 0.5rem;
-    }
-  
-    #elementosNav{
-        flex-direction: column;
+  @media all and (min-width: 992px) {
+    .d-block {
+      height: 180px;
+      width: 180px;
     }
   }
+  main {
+    top: 153px;
+  }
+  .text-start {
+    margin: 15px;
+  }
+}
+
+html {
+  font-family: "Roboto", sans-serif;
+}
+
+.container img {
+  width: 5rem;
+  height: 5rem;
+}
+
+#listaNavbar a {
+  padding: 0;
+  font-size: 1.5rem;
+  color: rgb(255, 255, 255);
+}
+
+#elementosNavbar a:hover {
+  color: #bf56ca;
+}
+
+#imgLogo {
+  max-height: 2rem;
+  width: 2rem;
+}
+
+#elementosNavbar {
+  display: flex;
+}
+
+#inputBuscar {
+  width: 13rem;
+  height: 2.5rem;
+}
+
+#buscarNavbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  text-decoration: none;
+}
+
+.efectoBlur {
+  background: #fafafa10 !important;
+  backdrop-filter: blur(0.4rem);
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+  #listaNavbar a {
+    padding: 0;
+    font-size: 1.1rem;
+  }
+
+  .container img {
+    width: 6.5rem;
+    height: 6.2rem;
+  }
+
+  #inputBuscar {
+    width: 12rem;
+    height: 2.2rem;
+  }
+
+  .botonesUsuario {
+    width: 10rem;
+    height: 2.8rem;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  #elementosNavbar a {
+    padding: 0;
+    font-size: 1rem;
+  }
+
+  #navbarSupportedContent {
+    justify-content: center;
+  }
+
+  #inputBuscar {
+    width: 12rem;
+    height: 2.5rem;
+  }
+
+  .container img {
+    width: 6.5rem;
+    height: 6.5rem;
+  }
+
+  nav li {
+    height: 2rem;
+  }
+
+  #listaNavbar {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  #elementosNavbar {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #listaNavbar {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #listaNavbar a {
+    padding: 0;
+    font-size: 1rem;
+  }
+
+  #navbarSupportedContent {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  li,
+  form {
+    margin: 0.5rem;
+  }
+
+  #elementosNav {
+    flex-direction: column;
+  }
+}
+
+footer {
+  width: 100%;
+  background: #312c32;
+  position: relative;
+  top: 200px;
+}
+
+#imgFooter {
+  display: flex;
+  justify-content: start;
+  width: 200px;
+  height: 200px;
+}
+
+li a {
+  font-weight: 300;
+}
+.listaFooter {
+  padding: 0;
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+  .contenedorLogo {
+    display: flex;
+    justify-content: center;
+  }
+
+  .listaFooter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+
+  #imgFooter {
+    width: 100;
+    height: 100;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  .contenedorLogo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .listaFooter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+
+  #imgFooter {
+    width: 300px;
+    height: 220px;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  ul,
+  ol {
+    padding-left: 0rem;
+  }
+}
