--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ a {
 }
 
 .colCaratulaCancion > a > img {
-  filter: opacity(0.6);
+  filter: opacity(0.7);
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -32,6 +32,8 @@ a {
 }
 
 .colCaratulaCancion > a > img:hover {
+  transform: scale(1.03);
+  transition: 0.2s all ease-out; 
   filter: opacity(1);
 }
 
@@ -135,7 +137,7 @@ a {
 .colDetalleCancion p {
   font-size: 0.6rem;
   color: rgb(192, 192, 192);
-  line-height: 0.4;
+  line-height: 1.3;
   /* font-weight: 500; */
 }
 
