Se solucionaron errores del nav y el footer

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -665,3 +665,36 @@ li a {
     padding-left: 0rem;
   }
 }
+
+.colorMorado {
+  background-color: #b416c8;
+}
+
+.colorMoradoText {
+  color: #b416c8;
+}
+
+.colorGradiente {
+  background: rgb(0, 192, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 192, 255, 1) 0%,
+    rgba(180, 22, 200, 1) 100%
+  );
+}
+
+.colorCeleste {
+  background-color: #00c0ff;
+}
+
+.colorCelesteText {
+  color: #00c0ff;
+}
+
+.fuentePrincipal {
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  background-color: #312c32;
+}
